--- a/cloud-module/cloud-module-system/src/main/resources/bootstrap.yml
+++ b/cloud-module/cloud-module-system/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
     nacos:
       discovery:
         namespace: dev
-        enabled: true # 如果不想使用 Nacos 进行服务注册和发现，设置为 false 即可
+        enabled: true # 如果不想使用 Nacos 进行服务注册和发现，设置为 false 即可1
         server-addr: 127.0.0.1:8848 # Nacos 服务器地址
       config:
         namespace: dev
