--- a/cloud-feign-api/pom.xml
+++ b/cloud-feign-api/pom.xml
@@ -3,16 +3,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-      <groupId>com.cy.cloud.module</groupId>
-      <artifactId>cloud-module</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <groupId>com.cy.cloud</groupId>
+      <artifactId>cloud</artifactId>
+      <version>1.0.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.cy.cloud.module.system</groupId>
-    <artifactId>cloud-module-system</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-
-    <name>cloud-module-system</name>
+    <groupId>com.cy.cloud.feign</groupId>
+    <artifactId>cloud-feign-api</artifactId>
+    <version>1.0.0</version>
+    <name>cloud-feign-api</name>
 
 </project>
