--- a/cloud-gateway/pom.xml
+++ b/cloud-gateway/pom.xml
@@ -14,5 +14,26 @@
     <name>cloud-gateway</name>
     <description>cloud-gateway</description>
 
-
+    <properties>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.cy.cloud.common</groupId>
+            <artifactId>cloud-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+        <!--                spring-cloud-starter-gateway包含了web,必须排除-->
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-web</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+    </dependencies>
 </project>
