--- a/cloud-common/pom.xml
+++ b/cloud-common/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.cy.cloud.common</groupId>
     <artifactId>cloud-common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>cloud-common</name>
     <description>cloud-common</description>
 
@@ -70,6 +71,10 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
 
