--- a/cloud-module/cloud-module-business/pom.xml
+++ b/cloud-module/cloud-module-business/pom.xml
@@ -15,4 +15,13 @@
 
     <name>cloud-module-business</name>
 
+    <!--    内部依赖-->
+    <dependencies>
+        <dependency>
+            <groupId>com.cy.cloud.feign</groupId>
+            <artifactId>cloud-feign-api</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
