--- a/cloud-module/cloud-module-system/pom.xml
+++ b/cloud-module/cloud-module-system/pom.xml
@@ -18,6 +18,10 @@
     <!--    内部依赖-->
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.cy.cloud.feign</groupId>
             <artifactId>cloud-feign-api</artifactId>
             <version>1.0.0</version>
