--- a/cloud-module/cloud-module-system/src/main/resources/bootstrap.yml
+++ b/cloud-module/cloud-module-system/src/main/resources/bootstrap.yml
@@ -20,3 +20,7 @@ spring:
           data-id: common.yml
           group: DEFAULT_GROUP
           refresh: true
+#  security:
+#    user:
+#      name: admin  # 用户名
+#      password: 123456  # 密码
